--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,12 @@
 # Site settings
-title: Freelancer
-email: your-email@domain.com
-url: https://github.com/jeromelachaud/freelancer-theme
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-keywords: "your keywords, separated by commas"
-skills: "Web Developer - Graphic Artist - User Experience Designer"
-meta_author: LastName FirstName
+title: Heitor de Magalhães
+email: heitor@domain.com
+url: https://mariojp.com.br/heitordemagalhaes
+
+description: "Conheça o incrível mundo do jovem atleta Heitor de Magalhães, jogador de tênis. Este site é dedicado a compartilhar suas jornadas esportivas, conquistas e paixão pelo tênis."
+keywords: "Heitor de Magalhães, young athlete, tennis player, promising talent, tennis matches, training insights, tournaments, sports journey, tennis adventure"
+skills: "Tenis Player"
+meta_author: Magalhães Heitor
 
 # Google webmaster tools
 google_verify:
@@ -32,31 +33,32 @@ color:
 
 # Footer settings
 footer:
-  copyright: Dr. Henry Jekyll
+  copyright: mariojp
   location: Location
   social: Around the Web
   credits: Credits
 
-# Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
+# Social networks usernames (many more available: stack-overflow, google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: twitter
-    url: http://twitter.com/jekyllrb
-  - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket
-    url: http://bitbucket.org/jekyll
-  - title: github
-    url: http://github.com/jekyll
+  # - title: twitter
+  #   url: http://twitter.com/jekyllrb
+  # - title: facebook
+  #   url:
+  - title: instagram
+    url: https://www.instagram.com/heitor_o_investidor
+  # - title: bitbucket
+  #   url: http://bitbucket.org/jekyll
+  # - title: github
+  #   url: http://github.com/jekyll
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: Pituba
+  - line: Salvador - Bahia - Brazil
 
 # Credits content
-credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
+# credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
+credits: 'make by <a href="https://mariojp.com.br">mariojp</a>'
 
 # Build settings
 markdown: kramdown
