--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ social:
   # - title: facebook
   #   url:
   - title: instagram
-    url: https://www.instagram.com/heitor_o_investidor
+    url: https://www.instagram.com/heitordemagalhaes.tennis
   # - title: bitbucket
   #   url: http://bitbucket.org/jekyll
   # - title: github
